:white_check_mark:chore: add test:staged ao lint-staged

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "lint-staged": {
     "*.ts": [
       "yarn eslint 'src/**' --fix",
-      "yarn prettier --write 'src/**'"
+      "yarn prettier --write 'src/**'",
+      "yarn test:staged"
     ]
   }
 }
