--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build":"tsc",
+    "start":"node dist/index.js",
     "start:dev": "nodemon --watch 'src/**/*.ts' --exec npx ts-node src/index.ts",
     "lint": "eslint . --ext .ts",
     "husky:prepare": "husky install",
